# mcup

./: .gitignore  CHANGELOG.md  Cargo.toml  DU.md  README.md  build.rs  release.sh  release.toml
.github/workflows/: ci.yml  release.yml  verify.yml
ci/: ubuntu-install-packages.sh
completions/: _mcup  _mcup.ps1  mcup.bash  mcup.elv  mcup.fish
doc/: man-page.sh  mcup.1  mcup.adoc
src/: app.rs  artifact.rs  command.rs  filter.rs  group.rs  main.rs  repo.rs  stats.rs  version.rs
