[package]
name = "mcup"
version = "0.2.9"
authors = [ "Harald Pehl <harald.pehl@gmail.com>" ]
edition = "2021"
description = "Command line tool to keep your local maven repository small and tidy."
readme = "README.md"
homepage = "https://github.com/hpehl/mcup"
repository = "https://github.com/hpehl/mcup"
license = "Apache-2.0"
keywords = ["cli", "maven", "repository"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
bit-vec = "0.8.0"
clap = { version = "4.5.37", features = ["cargo"] }
console = "0.15.11"
directories = "6.0.0"
glob = "0.3.2"
indicatif = "0.17.11"
lazy_static = "1.5.0"
quick-xml = "0.37.4"
regex = "1.11.1"
walkdir = "2.5.0"

[build-dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["cargo"] }
clap_complete = "4.5.47"

# use LTO for smaller binaries (that take longer to build)
[profile.release]
lto = true

[[bin]]
name = "mcup"
