[package]
name = "mcup"
version = "0.2.9"
authors = [ "Harald Pehl <harald.pehl@gmail.com>" ]
edition = "2021"
description = "Command line tool to keep your local maven repository small and tidy."
readme = "README.md"
homepage = "https://github.com/hpehl/mcup"
repository = "https://github.com/hpehl/mcup"
license = "Apache-2.0"
keywords = ["cli", "maven", "repository"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
bit-vec = "0.8.0"
clap = { version = "4.5.53", features = ["cargo"] }
console = "0.16.1"
directories = "6.0.0"
glob = "0.3.3"
indicatif = "0.18.3"
lazy_static = "1.5.0"
quick-xml = "0.38.4"
regex = "1.12.2"
walkdir = "2.5.0"

[build-dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["cargo"] }
clap_complete = "4.5.62"

# use LTO for smaller binaries (that take longer to build)
[profile.release]
lto = true

[[bin]]
name = "mcup"
